# ready-to-command

./: .gitignore  CMakeLists.txt  README.md
res/: main-window.glade
src/: CMakeLists.txt  command-config.hpp  execution-thread.cpp  execution-thread.hpp  main-application.hpp  main-window.cpp  main-window.hpp  main.cpp
